--- a/src/Components/Game/PlayArea/PlayArea.css
+++ b/src/Components/Game/PlayArea/PlayArea.css
@@ -44,7 +44,6 @@
     height: 280px;
     position: relative;
 
-
 }
 
 .PlayArea .winner-shadow {
@@ -141,6 +140,19 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8);
 
 }
+
+.PlayArea .count-down {
+    font-size: 200px;
+    position: absolute;
+    color: rgb(138, 63, 138);
+    font-weight: bold;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -52%);
+    /* Why do I need to add 2% to the y axis so the number will be centered */
+ 
+}
+
 
 .PlayArea .result-container .rematch-btn:hover {
     color: white;
